--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,9 +16,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
             android:layout_height="150dp"
-            android:src="@drawable/inst" />
+            android:src="@drawable/camera" />
 
         <EditText
             android:id="@+id/username"
