--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,9 +11,9 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="150dp"
-        android:src="@drawable/inst" />
+        android:src="@drawable/camera" />
 
 
     <Button
